<resources>
    <string name="app_name">GOJIM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login_label">Login</string>
    <string name="logout_label">Logout</string>
    <string name="register_label">Register</string>
    <string name="forgot_password_label">Forgot Password</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="dob_label">Date Of Birth (MM/DD/YYYY)</string>
    <string name="email_register_label">Email</string>
    <string name="password_register_label">Password</string>
    <string name="reenter_password_register_label">Re-enter Password</string>
    <string name="register_page_register_btn_label">Register</string>
    <string name="register_page_cancel_btn_label">Cancel</string>
    <string name="forgot_email_label">Enter Email Associated With Account</string>
    <string name="submit_email_label">Submit</string>
    <string name="community_btn_label">Community</string>
    <string name="health_btn_label">Health</string>
    <string name="QR_code_btn_label">QR Code</string>
    <string name="camera_btn_label">Camera</string>
    <string name="logout_btn_label">Log Out</string>
    <string name="settings_btn_label">Settings</string>
</resources>