<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <Button
        android:id="@+id/buttonCommunity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/community_btn_label"
        tools:layout_editor_absoluteX="66dp"
        tools:layout_editor_absoluteY="102dp" />

    <Button
        android:id="@+id/buttonHealth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/health_btn_label"
        tools:layout_editor_absoluteX="257dp"
        tools:layout_editor_absoluteY="102dp" />

    <Button
        android:id="@+id/buttonQRCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/QR_code_btn_label"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="210dp" />

    <Button
        android:id="@+id/buttonCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera_btn_label"
        tools:layout_editor_absoluteX="257dp"
        tools:layout_editor_absoluteY="212dp" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_btn_label"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="306dp" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_btn_label"
        tools:layout_editor_absoluteX="243dp"
        tools:layout_editor_absoluteY="301dp" />
</androidx.constraintlayout.widget.ConstraintLayout>